stop scroll  behind modal

--- a/src/sections/About/About.module.scss
+++ b/src/sections/About/About.module.scss
@@ -100,6 +100,10 @@
   overflow: hidden;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
+  @media screen and (max-width: 425px) {
+    width: 90%;
+  }
+
   @media screen and (min-width: 768px) {
     width: 580px;
     height: 602px;
